# strawberry-demo

./: pyproject.toml
app/: models.py  schema.py  types.py
app/migrations/: 0001_initial.py
mysite/: settings.py  urls.py
