[tool.poetry]
name = "strawberry"
version = "0.1.0"
description = ""
authors = ["Hendrik Levering <94710021+HendrikLevering@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.6"
strawberry-graphql-django = "^0.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
